force-app/main/default/objects/HDT_SelfReadings__mdt/HDT_SelfReadings__mdt.object-meta.xml
<CustomObject>
    <label>Self Readings Setting</label>
    <pluralLabel>Self Readings Settings</pluralLabel>
</CustomObject>