force-app/main/default/objects/HDT_SelfReadings__mdt/fields/OrderBadPhases__c.field-meta.xml
<CustomField>
    <fullName>OrderBadPhases__c</fullName>
    <description>Le fasi dell&apos;Order NON valide per innescare una autolettura da processo. I valori devono essere separati da una virgola. Il backend farà String.split(&apos;,&apos;) su questo campo.</description>
    <label>Order Bad Phases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>