force-app/main/default/objects/HDT_SelfReadings__mdt/fields/OrderBadStates__c.field-meta.xml
<CustomField>
    <fullName>OrderBadStates__c</fullName>
    <description>Gli stati dell&apos;Order NON validi per innescare una autolettura da processo. I valori devono essere separati da una virgola. Il backend farà String.split(&apos;,&apos;) su questo campo.</description>
    <label>Order Bad States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>