force-app/main/default/objects/HDT_SelfReadings__mdt/fields/ReadingDateDecrease__c.field-meta.xml
<CustomField>
    <fullName>ReadingDateDecrease__c</fullName>
    <description>Numero di giorni da sottrarre dalla data di creazione dell&apos;autolettura</description>
    <label>Reading Date Decrease</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>